[package]
name = "command-example"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@tempus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "game"
path = "src/game/main.rs"

[[bin]]
name = "player"
path = "src/player/main.rs"

[dependencies]
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }
futures = " 0.3.1"